src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Client_Number__c</fullName>
        <externalId>true</externalId>
        <label>Client Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Name__c</fullName>
        <label>Legal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merchant_ID__c</fullName>
        <externalId>true</externalId>
        <label>Merchant ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Segmentation__c</fullName>
        <label>Sales Segmentation</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>Foodstuffs_New_Zealand</fullName>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>Foodstuffs</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>Pak</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>New World</value>
        </filters>
        <label>Foodstuffs New Zealand</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>CSO_SA_SysAdmin_Transfer_Ownership</fullName>
        <active>true</active>
        <description>Only CSO, Sales Admin and System Admin should be able to transfer ownership of accounts.All other roles should not be able to transfer ownership of any accounts.</description>
        <errorConditionFormula>AND(
ISCHANGED( OwnerId ),
$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
$Profile.Name &lt;&gt; &quot;Chief Sales Officer&quot;,
$Profile.Name &lt;&gt; &quot;Sales Administrator&quot;)</errorConditionFormula>
        <errorMessage>Only CSO, Sales Admin and System Admin can transfer ownership of accounts</errorMessage>
    </validationRules>
</CustomObject>